# Intro

./: .gitignore  CLIP.txt  Ideas.md  Makefile  README.md  go.mod  hello_moonglow.ipynb  pyproject.toml
notebooks/: arc.ipynb  hello_zenith.ipynb  transformer1.ipynb
src/: get.js  images.py  info.py  lark.py  notebook.py  nvidia_smi.py  server.py  stop.js  test_notebook.js  test_stop.js  train.py  try_modal.py  volumes.py
src/intro/: __init__.py  hello.py
src/notebooks/: arc.ipynb  dit.ipynb  hello_zenith.ipynb  oops.ipynb
test/: upload.go
