[project]
name = "intro"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Zen T", email = "ztang230@gmail.com" }
]
dependencies = [
    "modal>=0.64.151",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/intro"]
